Manifest/clientui_deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: clientui-client
  labels:
    app: clientui-client

spec:
  replicas: 1
  selector:
    matchLabels:
      app: clientui-client

  template:
    metadata:
      labels:
        app: clientui-client

    spec:
      containers:
        - name: clientui-client
          image: livefox/clientui-client:latest
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service

metadata:
  name: clientui-client
  labels:
    app: clientui-client

spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: clientui-client
