Manifest/clientui_upload_player_video.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: clientui-client
  labels:
    app: clientui-client

spec:
  replicas: 1
  selector:
    matchLabels:
      app: clientui-client

  template:
    metadata:
      labels:
        app: clientui-client

    spec:
      containers:
        - name: clientui-client
          image: livefox/clientui-client:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: livefox-pv
              mountPath: /livefox
      volumes:
        - name: livefox-pv
          persistentVolumeClaim:
            claimName: livefox-pv-claim
---
apiVersion: v1
kind: Service

metadata:
  name: clientui-client
  labels:
    app: clientui-client

spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: clientui-client
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mupload-client
  labels:
    app: mupload-client

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mupload-client

  template:
    metadata:
      labels:
        app: mupload-client

    spec:
      containers:
        - name: mupload-client
          image: livefox/mupload-client:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9002
          volumeMounts:
            - name: livefox-pv
              mountPath: /livefox
      volumes:
        - name: livefox-pv
          persistentVolumeClaim:
            claimName: livefox-pv-claim
---
apiVersion: v1
kind: Service

metadata:
  name: mupload-client
  labels:
    app: mupload-client

spec:
  ports:
    - port: 9002
      protocol: TCP
  selector:
    app: mupload-client
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mplayer-client
  labels:
    app: mplayer-client

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mplayer-client

  template:
    metadata:
      labels:
        app: mplayer-client

    spec:
      containers:
        - name: mplayer-client
          image: livefox/mplayer-client:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9003
          volumeMounts:
            - name: livefox-pv
              mountPath: /livefox
      volumes:
        - name: livefox-pv
          persistentVolumeClaim:
            claimName: livefox-pv-claim
---
apiVersion: v1
kind: Service

metadata:
  name: mplayer-client
  labels:
    app: mplayer-client

spec:
  ports:
    - port: 9003
      protocol: TCP
  selector:
    app: mplayer-client
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mvideo-client
  labels:
    app: mvideo-client

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mvideo-client

  template:
    metadata:
      labels:
        app: mvideo-client

    spec:
      containers:
        - name: mvideo-client
          image: livefox/mvideo-client:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9001
          volumeMounts:
            - name: livefox-pv
              mountPath: /livefox
      volumes:
        - name: livefox-pv
          persistentVolumeClaim:
            claimName: livefox-pv-claim

---
apiVersion: v1
kind: Service

metadata:
  name: mvideo-client
  labels:
    app: mvideo-client

spec:
  ports:
    - port: 9001
      protocol: TCP
  selector:
    app: mvideo-client
