Manifest/mupload_deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mupload-client
  labels:
    app: mupload-client

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mupload-client

  template:
    metadata:
      labels:
        app: mupload-client

    spec:
      containers:
        - name: mupload-client
          image: livefox/mupload-client:latest
          ports:
            - containerPort: 9002

---
apiVersion: v1
kind: Service

metadata:
  name: mupload-client
  labels:
    app: mupload-client

spec:
  ports:
    - port: 9002
      protocol: TCP
  selector:
    app: mupload-client
