Manifest/livefox_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: livefox
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: clientui-client
              servicePort: 8080

          - path: /upload
            backend:
              serviceName: mupload-client
              servicePort: 9002
          
          - path: /video
            backend:
              serviceName: mplayer-client
              servicePort: 9003
